--- a/vignettes/vignette_analyse_citations_network_from_project.Rmd
+++ b/vignettes/vignette_analyse_citations_network_from_project.Rmd
@@ -14,14 +14,14 @@ knitr::opts_chunk$set(
 )
 ```
 
-This vignette give a basic understanding of the `list` of the `citations.network` dataframe returned by `codexplor::get_doc_network_from_project`.
+This vignette give a basic understanding of the `citations.network` returned within a list by `codexplor::get_doc_network_from_project`.
 
 ##Overview
 
 `codexplor::get_doc_network_from_project` :
 
 1. compute a `corpus.list` as it is returned by `codexplor::construct_corpus` (see [vignette of `construct_corpus`](https://clement-lvd.github.io/codexplor/articles/vignette_construct_corpus.html))
-2. and add a new `data.frame` with additional classes `citations.network` and `internal.dependencies`, as the edgelist of a network of the functions defined within the files of the corpus (see the [vignette of the `citations.network` `dataframe`](https://clement-lvd.github.io/codexplor/articles/vignette_citations.network_df_of_internal.dependencies.html)). 
+2. and add a new `data.frame` with additional classes `citations.network` and `internal.dependencies`, as the edgelist of a network of the functions defined within the files of the corpus (see the [vignette of the `citations.network` `data.frame`](https://clement-lvd.github.io/codexplor/articles/vignette_citations.network_df_of_internal.dependencies.html)). 
 
 In such a `citations.network` of `internal.dependencies`, links start from the programming file that calls a function and point to the programming file where the function is defined.
 
@@ -48,8 +48,3 @@ By default, `get_networkd3_from_igraph` will colorize the nodes accordingly to t
 For example, the most-common local dependancy inside the tidyverse/stringr repo is `compat-types-check.R`, [...] and we see that one of the `codexplor` file actually rely on a `stringr`method (i.e. `codexplor::str_extract_all_to_tidy_df.R` rely on `stringr/extract.R`). The opposite is not true.
 
 Playing with the parameters will reveal others insights, e.g., you should try to color nodes accordingly to their outdegrees, in order to reveal the high-level files of the project.
-
-### Crafting your own corpus with codexplor
-Depending on the languages you have to manage, you'll want to tweak the 'pattern' used for match a function definition. [xxx link to provide xxx]
-
-
