--- a/vignettes/vignette_citations.network_df_of_internal.dependencies.Rmd
+++ b/vignettes/vignette_citations.network_df_of_internal.dependencies.Rmd
@@ -14,29 +14,33 @@ knitr::opts_chunk$set(
 )
 ```
 
-This Vignette give a basic understanding of a `dataframe` of the `corpus.list` computed by some of the `codexplor` functions : a Citations Network of functions within programming project(s). This `data.frame` have additional classes `citations.network` and `internal.dependencies`.
+This Vignette explain the `data.frame` with additional classes `citations.network` and `internal.dependencies`. This `data.frame` is the edgelist of a Citations Network of functions within programming project(s).  
 
-## About the `citations.network` `dataframe` 
-**Overall Considerations.** The `citations.network` class of `dataframe` is one of the cornerstones of `codexplor`, in order to made clusters of files before further processing, e.g., before to aggregate readability statistics for finding 'difficult-to-read' clusters. Some of the `codexplor` reporting protocols will add this `citations.network` class of `dataframe` into the main `corpus.list`, e.g., `codexplor::get_doc_network_from_project()`. 
+## Network properties
 
-> 🎁 The `citations.network` `dataframe` is an edgelist^[Edgelist is the one of the standard representation of a graph (https://igraph.org/r/doc/as_edgelist.html).] that symbolize the programming project as a document-to-document citations network : a network of documents that cite each others. 
+### Overall Considerations : about the `citations.network` `data.frame` 
+Some of the `codexplor` reporting protocols add a `citations.network` class of `data.frame` to the main `corpus.list`, e.g., `codexplor::get_doc_network_from_project()`. 
 
-A citations network have theoretical network properties, not covered here (e.g., a citations network is a directed network).
+This `citations.network` `data.frame` is an edgelist^[Edgelist is the one of the standard representation of a graph (https://igraph.org/r/doc/as_edgelist.html).] that symbolize the programming project as a document-to-document citations network : a network of documents that cite each others. 
 
-**`citations.network` of `internal.dependencies`**. Regarding the network computed by `codexplor` with programming files, a type of interesting `citations.network` is the network of `internal.dependencies` within a programming project computed by `codexplor::get_doc_network_from_project()`. In such a network, links start from the programming file that calls a function and point to the programming file where the function is defined.
+Thus, the nodes of a `citations.network` `data.frame` are the programming files of the corpus. 
+
+> A citations network have theoretical network properties, not covered here (e.g., a citations network is a directed network). 
 
 ### Network of `internal.dependencies`
-One of the `dataframe` of the `corpus.list` have additional classes `citations.network` and `internal.dependencies`. In this network :
+A type of interesting `citations.network` is the network of `internal.dependencies` within a programming project : this `data.frame` of the `corpus.list` have additional classes `citations.network` and `internal.dependencies`. In this network :
 
-- Nodes are the programming files. 
-- Edges go from the file that calls a function to the file where the function is defined.
+- Nodes are the programming files, like any other `citations.network`. 
+- Links start from the programming file that calls a function and point to the programming file where the function is defined.
 
-`codexplor` default pattern are aimed to extract functions names from the files of a *programming* project (see next section). Thus, in a typical programming project :
+**Explaining a `citations.network` of `internal.dependencies`.** `codexplor` default pattern are aimed to extract functions names from the files of a *programming* project (see next section). Thus, in a typical programming project :
 
-- Nodes are files, supposed to be mostly - or only - functions ;
+- ° Nodes are files, supposed to be mostly - or only - functions ;
 - °← Indegree of a file is "how many files are calling the function(s) defined in this file" ;
 - °→ Outdegree of a file is "how many functions are used by this file" ; 
 - ⟲ Auto-mentioning refear to 'recursivity' (`codexplor` default is to filter autolinks).
+
+## Technical details
 
 ### Cascading matching operated by `compute_doc_network_from_corpus`
 Given a `corpus.list` created with `construct_corpus`, `codexplor::compute_doc_network_from_corpus()` will try to perform a 'cascading matching' :
@@ -61,9 +65,9 @@ knitr::kable(match_2, row.names = T)
 Thus, the 1st matches of `codexplor::construct_corpus` reveal some files that *defines* a function, and the 2nd matches of `compute_doc_network_from_corpus` show the files that used these functions.
 
 ### Function call that are non-supported during 2nd matches
-Some way of writing a program are not fully supported during the 2nd matches, such as the instantiated Python methods, i.e. `obj.method()`.
+Some way of writing a program are not fully supported during the 2nd matches.
 
-**Python instantiated methods.** If we take this Python code sample, the 1st match is realized by `construct_corpus`, but we can't perform a 2nd match with `codexplor` for now.
+**Python instantiated methods.** If we take this Python code sample, the 1st match is realized by `construct_corpus`, but we can't perform a 2nd match with `codexplor` on the instantiated Python methods, i.e. `obj.method()`.
 
 ```{r eval = F }
 #  Consider the Python code herafter 
