--- a/vignettes/vignette_analyse_citations_network_from_project.Rmd
+++ b/vignettes/vignette_analyse_citations_network_from_project.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 
 This vignette give a basic understanding of the `citations.network` returned within a list by `codexplor::get_doc_network_from_project`.
 
-##Overview
+## Overview
 
 `codexplor::get_doc_network_from_project` :
 
@@ -45,6 +45,6 @@ By default, `get_networkd3_from_igraph` will colorize the nodes accordingly to t
 
 *(codexplor functions network is truncated)*
 
-For example, the most-common local dependancy inside the tidyverse/stringr repo is `compat-types-check.R`, [...] and we see that one of the `codexplor` file actually rely on a `stringr`method (i.e. `codexplor::str_extract_all_to_tidy_df.R` rely on `stringr/extract.R`). The opposite is not true.
+For example, the most-common local dependency inside the tidyverse/stringr repo is `compat-types-check.R`, [...] and we see that one of the `codexplor` file actually rely on a `stringr`method (i.e. `codexplor::str_extract_all_to_tidy_df.R` rely on `stringr/extract.R`). The opposite is not true.
 
 Playing with the parameters will reveal others insights, e.g., you should try to color nodes accordingly to their outdegrees, in order to reveal the high-level files of the project.
