--- a/vignettes/vignette_analyse_citations_network_from_project.Rmd
+++ b/vignettes/vignette_analyse_citations_network_from_project.Rmd
@@ -31,7 +31,7 @@ Given folders path(s) and/or github repo(s), compute a *citations network* of th
 ```{r construct-corpus-and-network, eval = F, echo=TRUE}
 require(codexplor)
 net <- get_doc_network_from_project(
-  repos =  c("tidyverse/stringr", "clement-lvd/codexplor"))
+  repos =  c("tidyverse/stringr"))
         # by default, codexplor deal with R project
 
 get_networkd3_from_igraph(net$internal.dependencies)
@@ -45,6 +45,6 @@ By default, `get_networkd3_from_igraph` will colorize the nodes accordingly to t
 
 *(codexplor functions network is truncated)*
 
-For example, the most-common local dependency inside the tidyverse/stringr repo is `compat-types-check.R`, [...] and we see that one of the `codexplor` file actually rely on a `stringr`method (i.e. `codexplor::str_extract_all_to_tidy_df.R` rely on `stringr/extract.R`). The opposite is not true.
+For example, the most-common local dependency inside the tidyverse/stringr repo are `modifiers.R` `compat-types-check.R`. Next, there is other text-mining metrics that will give us insights about these files, e.g., one should verify that the local complexity of this `compat-types-check.R` file is keep to a 'trivial' level.
 
-Playing with the parameters will reveal others insights, e.g., you should try to color nodes accordingly to their outdegrees, in order to reveal the high-level files of the project.
+Playing with the parameters of `get_networkd3_from_igraph` will reveal others insights, e.g., you should try to color nodes accordingly to their outdegrees, in order to reveal the high-level files of the project.
