--- a/vignettes/vignette_citations.network_df_of_internal.dependencies.Rmd
+++ b/vignettes/vignette_citations.network_df_of_internal.dependencies.Rmd
@@ -19,7 +19,7 @@ This Vignette explain the `data.frame` with additional classes `citations.networ
 ## Network properties
 
 ### Overall Considerations : about the `citations.network` `data.frame` 
-Some of the `codexplor` reporting protocols add a `citations.network` class of `data.frame` to the main `corpus.list`, e.g., `codexplor::get_doc_network_from_project()`. 
+Some of the `codexplor` protocols add a `citations.network` class of `data.frame` to the main `corpus.list`, e.g., `codexplor::get_doc_network_from_project()`. 
 
 This `citations.network` `data.frame` is an edgelist^[Edgelist is the one of the standard representation of a graph (https://igraph.org/r/doc/as_edgelist.html).] that symbolize the programming project as a document-to-document citations network : a network of documents that cite each others. 
 
@@ -39,16 +39,16 @@ A `data.frame` of the `corpus.list` have additional classes `citations.network` 
 ## Technical details
 
 ### Cascading matching operated by `compute_doc_network_from_corpus`
-Given a `corpus.list` created with `construct_corpus`, `codexplor::compute_doc_network_from_corpus()` will try to perform a 'cascading matching' :
+Given a `corpus.list` created with `construct_corpus`, `codexplor::compute_doc_network_from_corpus()` perform a 'cascading matching' :
 
 ```{r table-cascading-matches, echo=FALSE}
 
-match_2 <- data.frame(Step = c("⏩ `construct_corpus` is supposed to extract *functions names as a 1st matches*, from the files where these functions are defined)"
-                    , "⏩ Transform the *1st matches* into a pattern and search for these patterns in the initial content, in order to compute a Citations Network with these 2nd matches")
+match_2 <- data.frame(Step = c("⏩ `construct_corpus` extract *functions names* from the files where these functions are defined"
+                    , "⏩ Search for these patterns and compute a Citations Network")
              
              , Examples = c("e.g., have found 'Pier', 'pol' and 'jak' function names in 3 separate files" 
                           
-,"e.g., a programming file is citing 'Pier', 'pol' and 'jak' and thus this file is linked to the files where we previously found these matches"))
+,"e.g., a programming file is citing 'Pier(', 'pol(' and 'jak(' and thus this file is linked to the 3 files where these functions are defined (Step 1)"))
 
 
 rownames(match_2) <- c("1st matches" , "2nd matches" )
@@ -58,7 +58,7 @@ knitr::kable(match_2, row.names = T)
 
 ```
 
-Thus, the 1st matches of `codexplor::construct_corpus` reveal some files that *defines* a function, and the 2nd matches of `compute_doc_network_from_corpus` show the files that used these functions.
+Thus, the 1st matches of `codexplor::construct_corpus` indicates some files that *defines* a function, and the 2nd matches of `compute_doc_network_from_corpus` show the files that *used* these functions. 
 
 ### Function call that are non-supported during 2nd matches
 Some way of writing a program are not fully supported during the 2nd matches.
