--- a/vignettes/vignette_analyse_citations_network_from_project.Rmd
+++ b/vignettes/vignette_analyse_citations_network_from_project.Rmd
@@ -43,8 +43,11 @@ By default, `get_networkd3_from_igraph` will colorize the nodes accordingly to t
 
 ![.](../man/figures/example_net3d_dataviz.png){width=90%}
 
-*(codexplor functions network is truncated)*
+For example, the most-common local dependency inside the tidyverse/stringr repo are `modifiers.R` `compat-types-check.R`. Next, there is other text-mining metrics that will give us insights about these files, e.g., one should verify that the local complexity of this `compat-types-check.R` file is always reported as a 'trivial' level (see next section).
 
-For example, the most-common local dependency inside the tidyverse/stringr repo are `modifiers.R` `compat-types-check.R`. Next, there is other text-mining metrics that will give us insights about these files, e.g., one should verify that the local complexity of this `compat-types-check.R` file is keep to a 'trivial' level.
+Playing with the parameters of `get_networkd3_from_igraph` will reveal others insights, e.g., you should try to color nodes accordingly to their outdegrees, in order to reveal the files that contain high-level functions of the project.
 
-Playing with the parameters of `get_networkd3_from_igraph` will reveal others insights, e.g., you should try to color nodes accordingly to their outdegrees, in order to reveal the high-level files of the project.
+      get_networkd3_from_igraph(net$internal.dependencies,  color_outdeg_instead_of_indeg = T)
+      
+#### Mix Network Analysis and Document-level Metrics
+[WIP]
