--- a/vignettes/vignette_analyse_citations_network_from_project.Rmd
+++ b/vignettes/vignette_analyse_citations_network_from_project.Rmd
@@ -21,7 +21,7 @@ This vignette give a basic understanding of the `citations.network` returned wit
 `codexplor::get_doc_network_from_project` :
 
 1. compute a `corpus.list` as it is returned by `codexplor::construct_corpus` (see [vignette of `construct_corpus`](https://clement-lvd.github.io/codexplor/articles/vignette_construct_corpus.html))
-2. and add a new `data.frame` with additional classes `citations.network` and `internal.dependencies`, as the edgelist of a network of the functions defined within the files of the corpus (see the [vignette of the `citations.network` `data.frame`](https://clement-lvd.github.io/codexplor/articles/vignette_citations.network_df_of_internal.dependencies.html)). 
+2. and add a new `data.frame` with additional classes `citations.network` and `internal.dependencies`. This is the edgelist of a network of the functions defined within the files of the corpus (see the [vignette of the `citations.network` `data.frame`](https://clement-lvd.github.io/codexplor/articles/vignette_citations.network_df_of_internal.dependencies.html)). 
 
 In such a `citations.network` of `internal.dependencies`, links start from the programming file that calls a function and point to the programming file where the function is defined.
 
@@ -43,7 +43,7 @@ By default, `get_networkd3_from_igraph` will colorize the nodes accordingly to t
 
 ![.](../man/figures/example_net3d_dataviz.png){width=90%}
 
-For example, the most-common local dependency inside the tidyverse/stringr repo are `modifiers.R` `compat-types-check.R`. Next, there is other text-mining metrics that will give us insights about these files, e.g., one should verify that the local complexity of this `compat-types-check.R` file is always reported as a 'trivial' level (see next section).
+For example, the most-common local dependency inside the tidyverse/stringr repo are `modifiers.R` `compat-types-check.R`. Next, there is other text-mining metrics that will give us insights about these files, e.g., one should verify that the local complexity of this `compat-types-check.R` file is reported as a 'trivial' level (see next section).
 
 Playing with the parameters of `get_networkd3_from_igraph` will reveal others insights, e.g., you should try to color nodes accordingly to their outdegrees, in order to reveal the files that contain high-level functions of the project.
 
