--- a/README.Rmd
+++ b/README.Rmd
@@ -33,7 +33,7 @@ require(codexplor)
 
 `codexplor` offers **R** functions dedicated to explore, analyze and monitor a programming project.
 
-Given a programming project, `codexplor` compute standardized text mining metrics and dataviz' about the project : get rid of global complexity with a network of local dependancies, and assess local complexity with document-level metrics.
+Given a programming project, `codexplor` compute standardized text mining metrics and dataviz' about the project : get rid of global complexity with a network of local dependancies, and assess local complexity with document-level and functions-level metrics !
 
 > `codexplor` help me to figure out the big picture of a programming project faster, and to manage it more efficiently.
 
@@ -51,26 +51,38 @@ The default settings of `codexplor` are optimized for analyzing a project in ![R
 
 ---
 
-### Example : dataviz' of internal dependancies
-Return an interactive dataviz' of the internal dependancies within `codexplor` :
+### Example
 
+#### Turn a programming project into a corpus
+Given folder(s) and/or github repo(s) and programming language(s), `codexplor::get_doc_network_from_project` will return a `list` - with additional class `corpus.list` - of dataframes :
+
+- 2 `corpus.lines` dataframes (`codes` & `comments`)
+- 2 `corpus.nodelist` dataframes (`files` & `functions`)
+- 1 `citations.network` data.frame (`internal.dependencies`)
+
+This corpus is standardized way to analyze a programming project as a collection of documents.  
+  
 ```{r compute-corpus-of-func, echo=TRUE}
 library(codexplor)
 
  # 1) Construct a corpus and a Citations network
-  corpus <- get_doc_network_from_project(folders = getwd(), languages = "R" )
-   # return a corpus.list object with 4 data.frames :
-  # => 2 corpus.lines (codes & comments)
-  # => 2 corpus.nodelist (files & functions)
-  # => 1 citations.network (internal.dependencies)
+  corpus <- get_doc_network_from_project(folders = getwd()
+                                         , languages = "R" )
+    str(corpus, max.level = 1)
+  
 ```
+
+#### Turn a corpus element into a dataviz'
+Given a corpus with a `citations.network` `data.frame`, look at the dataviz' of internal dependancies with `codexplor::get_networkd3_from_igraph` :
 
 ```{r compute-network-of-func,  results='asis', echo=TRUE}
 # 2) Produce an interactive dataviz' with the network of internal.dependencies
 dataviz <- get_networkd3_from_igraph(corpus$internal.dependencies
 , title_h1 = "Graph of internal dependancies"
 , subtitle_h2 = "codexplor"
-, endnotes_h3 = "Color and links symbolize indegrees") 
+, endnotes_h3 = "Color and links = indegrees") 
+
+# herafter an image (non-interactive) of the interactive dataviz ↓
 ```
 
 ```{r save-plot, include=FALSE, results='asis'}
@@ -98,18 +110,23 @@ features <- data.frame(Feature = c(
 
 , "![.](https://img.shields.io/badge/{🚧}-bold?style=flat&logoColor=black&logoSize=2&label=Document-level metrics&labelColor=grey&color=orange)"
 
+, "![.](https://img.shields.io/badge/{🚧}-bold?style=flat&logoColor=black&logoSize=2&label=Function-level metrics&labelColor=grey&color=red)"
+
 , "![.](https://img.shields.io/badge/{🚧}-bold?style=flat&logoColor=black&logoSize=2&label=Line-level metrics&labelColor=grey&color=green)"
  
 ) #2 : documement-level text-mining
            
         , Global_insights = c( "Appreciate global complexity and figure out the pig picture" 
                                , "Reveal clusters of 'difficult-to-read' files"
+  , "Reveal the most complex functions"
+
                                , "↑ (used by global level metric)"
                                ) # 2 : documement-level text-mining
           
         , Local_insights = c( "Reveal critical files, e.g., major internal dependancies" 
           ,  "Assess each file with text-mining metrics, e.g., length and files readability"  # 2 : documement-level text-mining
-           , "Identify problematic lines, e.g., the longest ones")
+           , "Identify problematic functions, e.g., the longest ones"
+           , "Identify problematic lines")
 )
 
 names(features) <- c("Computed Methods","Global insights" , "Local insights on files")
