--- a/vignettes/vignette_construct_corpus.Rmd
+++ b/vignettes/vignette_construct_corpus.Rmd
@@ -16,9 +16,9 @@ library(codexplor)
 
 ```
 
-**`codexplor::construct_corpus`** read programming files and turn a programming project into a text-mining corpus, given :
+**`codexplor::construct_corpus`** turn a programming project into a text-mining corpus, given :
 
-- folder(s) path(s) and/or github repo(s) to analyze ;
+- folder(s) path(s) and/or github repo(s) of the project ;
 - and programming language(s) - default is `'R'`.
 
 **Supported languages.** By default `construct_corpus` will analyze .R files, but one or several `languages` could be indicated. Recognized languages are `r paste0(names(get_def_regex_by_language()) , collapse = ", ")`. 
@@ -60,7 +60,7 @@ Further complementary analyzes will add others dataframes to the list, e.g., a n
 
 - The `files` `data.frame` is sorted by files, and contains the files path and/or url, and overall text-mining metrics about each files of the corpus (e.g., number of characters, words count).
 
-- The `functions` `data.frame` contains the functions names and text-mining metrics about these functions, assuming functions are defined in file(s).
+- The `functions` `data.frame` contains the functions names and text-mining metrics about these functions.
 
 - The 2 `corpus.lines` `data.frame` are related to lines (file path and content of each lines, line number, and text-mining metrics related to each lines). 
 
@@ -78,7 +78,7 @@ With these patterns, `construct_corpus` will :
 1. read the files accordingly to their extension, e.g., R language is associated with `'.R'` files. 
 2. process commented lines accordingly to each language definition, e.g., R & Python use `'#'` and don't allow multi-lines comments, contrary to JavaScript.
 3. isolate the exposed content, i.e. not quoted and not within a `'{ }'`.
-3. match functions names within the exposed content.
+4. extract functions names from the exposed content, in order to list the internally exposed functions of the programming project.
 
 ```{r table-operations-construct-corpus, eval=FALSE, include=FALSE}
 
